--- a/research/slow_earthquakes/cite.bib
+++ b/research/slow_earthquakes/cite.bib
@@ -1,11 +1,11 @@
-@article{Beauce:2017,
- abstract = {Matched-filter searches are an important tool in modern seismology to detect seismic events. They operate via an algorithm that computes the correlation coefficient between a template event and a sliding window of continuous seismic records. A detection is recorded when the correlation coefficient crosses an established threshold. We present an optimized program, called Fast Matched Filter (FMF), that efficiently runs a network-based matched-filter search with either central processing units (CPUs) or Nvidia graphics processing units (GPUs). Wrappers for both Python and MATLAB (CPU only) are provided to easily run FMF on a wide range of computational resources, from multicore laptops to specialized computing clusters with GPUs. Both implementations leverage a significantly similar structure when it comes to the continuous computation of correlation coefficients in the time domain to achieve rapid performance. The highly parallel architecture of GPUs lends itself perfectly to the matched-filter algorithm, and we achieve the fastest run times with our GPU implementation. FMF allows for seismic network-based matched-filtering between a large set of template waveforms and a large continuous dataset in a reasonable amount of time. Such fast run times are an important step in expanding the scope of earthquake detection and fostering the reproducibility of such studies.},
- author = {Beaucé, Eric and Frank, William B and Romanenko, Alexey},
- day = {20},
- doi = {10.1785/0220170181},
- journal = {Seismological Research Letters},
- month = {December},
- title = {Fast matched-filter (FMF): an efficient seismic matched-filter search for both CPU and GPU architectures},
- year = {2017}
+@article{Jolivet:2020,
+ abstract = {To first order, faults are locked while stress builds up to a devastating earthquake. However, we know that faults also slip slowly. After decades of geophysical observation, slow slip is now recognized as part of a continuum of transient deformation ranging from the dynamic propagation of seismic rupture to aseismic events over a wide range of durations and sizes. A growing body of evidence suggests that large-scale slow slip events can be decomposed into a multitude of smaller, temporally clustered events. Slow slip is more frequent and more dynamic than is suggested by conceptual models of rate-strengthening, stable slip.},
+ author = {Jolivet, Romain and Frank, William B},
+ day = {3},
+ doi = {10.1029/2019AV000126},
+ journal = {AGU Advances},
+ month = {March},
+ title = {The transient and intermittent nature of slow slip},
+ year = {2020}
 }
 
