--- a/publication/bryan-2023/cite.bib
+++ b/publication/bryan-2023/cite.bib
@@ -1,7 +1,7 @@
 @article{Bryan:2023,
  abstract = {Temporal changes in seismic velocities are an important tool for tracking structural changes within the crust during transient deformation. While many geophysical processes span the crust, including volcanic unrest and large-magnitude earthquakes, existing methods for seismic monitoring are limited to the shallow subsurface. We present an approach for deep seismic monitoring based on teleseismic receiver functions, which illuminate the crustal velocity structure from the bottom-up. Using synthetic waveform modeling, we show that receiver functions are uniformly sensitive to velocity changes throughout the crust and can locate the depth of the perturbation. We introduce a novel method based on optimal transport for measuring the nonlinear time-amplitude signal variations characteristic of receiver function monitoring. We show that optimal transport enables comparison of full waveform distributions rather than relying on representative stacked waveforms. We further study a linearized version of optimal transport that renders time-warping signal variations into simple Euclidean perturbations, and use this capability to perform blind source separation in the space of waveform variations. This disentangles the effects of changes in the source-receiver path from changes in subsurface velocities. Collectively, these methods extend the reach of seismic monitoring to deep geophysical processes, and provide a tool that can be used to study heterogeneous velocity changes with different spatial extents and temporal dynamics.},
  author = {Bryan, Jared and Frank, William B. and Audet, Pascal},
- doi = {https://doi.org/10.1093/gji/ggad130},
+ doi = {10.1093/gji/ggad130},
  journal = {Geophysical Journal International},
  month = {March},
  title = {Capturing seismic velocity changes in receiver functions with optimal transport},
