--- a/publication/wang-2023/cite.bib
+++ b/publication/wang-2023/cite.bib
@@ -1,7 +1,7 @@
 @article{Wang:2023,
  abstract = {Low-frequency earthquakes, atypical seismic events distinct from regular earthquakes, occur downdip of the seismogenic megathrust where an aseismic rheology dominates the subduction plate boundary. Well situated to provide clues on the slip regime of this unique faulting environment, their distinctive waveforms reflect either an unusual rupture process or unusually strong attenuation in their source zone. We take advantage of the unique geometry of seismicity in the Nankai Trough to isolate the spectral signature of low-frequency earthquakes after correcting for empirically derived attenuation. We observe that low-frequency earthquake spectra are consistent with the classical earthquake model, yet their rupture duration and stress drop are orders of magnitude different from ordinary earthquakes. We conclude their low-frequency nature primarily results from an atypical seismic rupture process rather than near-source attenuation.},
  author = {Wang, Qing-Yu and Frank, William B and Abercrombie, Rachel E and Obara, Kazushige and Kato, Aitaro},
- doi = {https://doi.org/10.1126/sciadv.adh3688},
+ doi = {10.1126/sciadv.adh3688},
  journal = {Science Advances},
  month = {August},
  title = {What makes low-frequency earthquakes low frequency},
