--- a/publication/xie-2022/cite.bib
+++ b/publication/xie-2022/cite.bib
@@ -5,7 +5,7 @@ volume = {312},
 pages = {106922},
 year = {2023},
 issn = {0013-7952},
-doi = {https://doi.org/10.1016/j.enggeo.2022.106922},
+doi = {10.1016/j.enggeo.2022.106922},
 url = {https://www.sciencedirect.com/science/article/pii/S0013795222004070},
 author = {Fan Xie and Eric Larose and Qingyu Wang and Yuxiang Zhang},
 keywords = {Ambient noise interferometry, Seismic precursor, Rock slope, Rock damage},
