--- a/publication/yuan-2021/cite.bib
+++ b/publication/yuan-2021/cite.bib
@@ -1,7 +1,7 @@
 @article{Yuan:2021,
  abstract = {Temporal changes in subsurface properties, such as seismic wave speeds, can be monitored by measuring phase shifts in the coda of two seismic waveforms that share a similar source–receiver path but that are recorded at different times. These nearly identical seismic waveforms are usually obtained either from repeated earthquake waveforms or from repeated ambient noise cross-correlations. The five algorithms that are the most popular to measure phase shifts in the coda waves are the windowed cross correlation (WCC), trace stretching (TS), dynamic time warping (DTW), moving window cross spectrum (MWCS) and wavelet cross spectrum (WCS). The seismic wave speed perturbation is then obtained from the linear regression of phase shifts with their respective lag times under the assumption that the velocity perturbation is homogeneous between (virtual or active) source and receiver. We categorize these methods into the time domain (WCC, TS, DTW), frequency domain (MWCS) and wavelet domain (WCS). This study complements this suite of algorithms with two additional wavelet-domain methods, which we call wavelet transform stretching (WTS) and wavelet transform DTW, wherein we apply traditional stretching and DTW techniques to the wavelet transform. This work aims to verify, validate, and test the accuracy and performance of all methods by performing numerical experiments, in which the elastic wavefields are solved for in various 2-D heterogeneous half-space geometries. Through this work, we validate the assumption of a linear increase in phase shifts with respect to phase lags as a valid argument for fully homogeneous and laterally homogeneous velocity changes. Additionally, we investigate the sensitivity of coda waves at various seismic frequencies to the depth of the velocity perturbation. Overall, we conclude that seismic wavefields generated and recorded at the surface lose sensitivity rapidly with increasing depth of the velocity change for all source–receiver offsets. However, measurements made over a spectrum of seismic frequencies exhibit a pattern such that wavelet methods, and especially WTS, provide useful information to infer the depth of the velocity changes.},
  author = {Yuan, Congcong and Bryan, Jared and Denolle, Marine},
- doi = {https://doi.org/10.1093/gji/ggab140},
+ doi = {10.1093/gji/ggab140},
  journal = {Geophysical Journal International},
  month = {April},
  title = {Numerical comparison of time-, frequency-, and wavelet-domain methods for coda wave interferometry},
